Fixed file loc problems

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,5 @@
 [metadata]
+url = https://github.com/IsaacWritesCodeGithub/Auto-pptx
 name = auto-pptx
 version = 1.0.0
 description = Automatically creates lyric powerpoints
@@ -10,4 +11,4 @@ packages = find:
 
 [options.entry_points]
 console_scripts =
-    auto-pptx = powerpoint_creator.main:main
+    auto-pptx = auto-pptx.main:main
