--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Prevent api key from getting commited
+api_key.py
+
+# Mac stuff
+.DS_Store
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
