--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 url = https://github.com/IsaacWritesCodeGithub/Auto-pptx
 name = auto-pptx
-version = 1.0.1
+version = 1.0.2
 description = Automatically creates lyric powerpoints
 author = IsaacWritesCode
 author_email = isaacwritescode7@gmail.com
@@ -11,4 +11,4 @@ packages = find:
 
 [options.entry_points]
 console_scripts =
-    auto-pptx = powerpoint_creator.autopptx.main:main
+    auto-pptx = auto-pptx.main:main
