--- a/setup.cfg
+++ b/setup.cfg
@@ -11,4 +11,4 @@ packages = find:
 
 [options.entry_points]
 console_scripts =
-    auto-pptx = powerpoint_creator.auto-pptx.main:main
+    auto-pptx = powerpoint_creator.pptx.main:main
