--- a/setup.cfg
+++ b/setup.cfg
@@ -16,4 +16,4 @@ author_email = isaacwritescode7@gmail.com
 
 [options.entry_points]
 console_scripts =
-    auto-pptx = pptx._main:main
+    auto-pptx = pptx.main:main
