--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [options]
 install_requires =
-    lyricsgenius>=3.0.1
-    Gooey>=1.0.8.1
-    python-pptx>=0.6.21
+    lyricsgenius==3.0.1
+    Gooey==1.0.8.1
+    python-pptx==0.6.21
 packages = find:
 python_requires = >=3.9
 
